[tool.poetry]
name = "kaori"
version = "1.0.0"
description = "dumb chat bot"
authors = ["Austin Pray <austin@austinpray.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
alembic = "^1.0"
arrow = "^0.17.0"
dramatiq = {version = "^1.9", extras = ["rabbitmq", "watch"]}
falcon = "^2.0"
psycopg2-binary = "^2.8"
sentry-sdk = "^0.19.3"
requests = "^2.24"
slackclient = "^1.3"
ujson = "^4.0"
gunicorn = "^20.0"
gevent = "^1.4"
google-cloud-storage = "^1.29.0"
furl = "^2.1.0"
pandas = "^1.0.5"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mdv = "^1.7.4"
rich = "^10.2.2"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
