[tool.poetry]
name = "kaori"
version = "1.0.0"
description = "dumb chat bot"
authors = ["Austin Pray <austin@austinpray.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.3"
alembic = "^1.0"
arrow = "^1.2.3"
dramatiq = {version = "^1.9", extras = ["rabbitmq", "watch"]}
falcon = "^3.1"
psycopg2-binary = "^2.8"
sentry-sdk = "^1.10.1"
requests = "^2.24"
slackclient = "^1.3"
ujson = "^5.7"
gunicorn = "^20.1.0"
gevent = "^22.10.2"
google-cloud-storage = "^2.6.0"
furl = "^2.1.0"
pandas = "^1.0.5"
seaborn = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.2"
rich = "^3.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
